TestCases/ASTTests/SemanticErrorsTests/tests/test23.c




int main() {
    float f;
    **f = 5;
}
